specs/language/grammar.ebnf
(* AICAD current source grammar, evolved from RFC-0001 §7.
   This is the canonical current grammar surface starting with the Stage-2
   frontend work (AICAD-039+). It remains intentionally focused on source
   syntax the parser actually supports. A reserved lexer word, a planning
   example, or an internal IR type does not become a source production
   merely by existing elsewhere in the repository.

   Every accepted user-visible syntax change should update this artifact,
   positive/negative conformance coverage, and relevant user documentation.

   Patched by the independent Stage-0 review
   (project/reports/reviews/STAGE0-INDEPENDENT-REVIEW.md) to add
   if_expr/match_expr/block_expr, which the original sketch referenced
   (block_expr) or partially covered (if/match as statements only) but
   never fully defined, even though existing precedent
   (docs/plan/07_ASSEMBLIES_KINEMATICS_CONFIGURATIONS.md §10 and the
   Stage-0 paper example) already relies on if/match in expression
   position. No new syntax is introduced beyond RFC-0001 §4's "broadly
   Rust/TypeScript-like" framing (DL-1).

   Patched again (`AICAD-056`) to add list_expr/range_expr, per the owner
   ruling recorded at `project/OWNER_DECISIONS.md#D16`. Both are ordinary
   expression alternatives — no new statement/declaration syntax and no
   compiler intrinsic.

   Patched again (`AICAD-057B`) to add `type_params` to `fn_decl` and the
   corresponding current struct/enum declaration forms, per D17/DL-14.
   Each parameter is a bare identifier only — no bounds, defaults,
   variance, or lifetime syntax.

   Patched again (`AICAD-057C`) to add the three enum-variant shapes,
   tuple/record destructuring patterns, and record literals under D17.

   Stage-3 cleanup note: the current item set is deliberately limited to
   let/const/param/fn/struct/enum/part/import. `interface`, `assembly`,
   `requirement`, and `test` may remain reserved/planned vocabulary, but
   they are not current declaration productions. There is likewise no
   public `sketch { ... }` production and no Stage-4 semantic-reference
   syntax in the current grammar. *)

program        = { item } ;
item           = let_decl | const_decl | param_decl
               | fn_decl | struct_decl | enum_decl | part_decl
               | import_decl ;

(* Current declaration forms. *)
let_decl       = "let" , identifier , [ ":" , type ] , "=" , expression , ";" ;
const_decl     = "const" , identifier , [ ":" , type ] , "=" , expression , ";" ;
param_decl     = "param" , identifier , ":" , type , [ "=" , expression ] , ";" ;
struct_decl    = "struct" , identifier , [ type_params ] , "{" ,
                 [ field , { "," , field } , [","] ] , "}" ;
enum_decl      = "enum" , identifier , [ type_params ] , "{" ,
                 [ enum_variant , { "," , enum_variant } , [","] ] , "}" ;
part_decl      = "part" , identifier , "{" , { item } , "}" ;
import_decl    = "import" , import_path ,
                 [ "::" , "{" , identifier , { "," , identifier } , [","] , "}" ] ,
                 ";" ;
import_path    = relative_path | package_path ;
relative_path  = ( "../" )* , "./" , identifier , { "/" , identifier }
               | ( "../" )+ , identifier , { "/" , identifier } ;
package_path   = identifier , { "." , identifier } ;
field          = identifier , ":" , type ;

type           = identifier , [ "<" , type , { "," , type } , [","] , ">" ] ;

block          = "{" , { statement } , "}" ;
statement      = let_stmt | var_stmt | assign_stmt | expr_stmt
               | if_stmt | for_stmt | while_stmt | loop_stmt
               | match_stmt | return_stmt | break_stmt | continue_stmt ;

let_stmt       = "let" , identifier , [ ":" , type ] , "=" , expression , ";" ;
var_stmt       = "var" , identifier , [ ":" , type ] , "=" , expression , ";" ;
assign_stmt    = identifier , "=" , expression , ";" ;   (* explicit rebind, DL-2 *)
expr_stmt      = expression , ";" ;                       (* unused result discarded *)

if_stmt        = "if" , expression , block , [ "else" , ( block | if_stmt ) ] ;
for_stmt       = "for" , identifier , "in" , expression , block ;
while_stmt     = "while" , expression , block ;
loop_stmt      = "loop" , block ;
match_stmt     = "match" , expression , "{" , { match_arm } , "}" ;
match_arm      = pattern , "=>" , ( expression , "," | block ) ;
pattern        = wildcard_pattern | literal | identifier
               | tuple_pattern | record_pattern ;
                 (* A bare identifier is disambiguated by binding: it may
                    name an enum variant or introduce a pattern binding. *)
wildcard_pattern
               = "_" ;
tuple_pattern  = identifier , "(" , [ pattern , { "," , pattern } , [","] ] , ")" ;
record_pattern = identifier , "{" ,
                 [ record_pattern_field , { "," , record_pattern_field } , [","] ] ,
                 "}" ;
record_pattern_field
               = identifier , [ ":" , pattern ] ;
                 (* Bare field shorthand binds a name equal to the field. *)
return_stmt    = "return" , [ expression ] , ";" ;
break_stmt     = "break" , ";" ;
continue_stmt  = "continue" , ";" ;

fn_decl        = [ "pure" ] , "fn" , identifier , [ type_params ] ,
                 "(" , [ params ] , ")" , [ "->" , type ] , block ;
params         = param , { "," , param } ;
param          = identifier , ":" , type , [ "=" , expression ] ;

type_params    = "<" , identifier , { "," , identifier } , [","] , ">" ;
                 (* D17/DL-14: bare type parameters only. No interface/
                    trait bounds, defaults, variance, or lifetime syntax. *)

enum_variant   = identifier
               | identifier , "(" , [ type , { "," , type } , [","] ] , ")"
               | identifier , "{" ,
                 [ field , { "," , field } , [","] ] , "}" ;

expression     = range_expr ;
range_expr     = or_expr , [ ( ".." | "..=" ) , or_expr ] ;
                 (* D16: non-associative range expression. *)
or_expr        = call_expr | method_call_expr | binary_expr | literal
               | identifier | "(" , expression , ")" | block_expr
               | if_expr | match_expr | list_expr | record_literal ;
                 (* `binary_expr` denotes the parser's ordinary precedence
                    ladder: ||, &&, equality, relational, additive,
                    multiplicative, unary/postfix/primary as applicable. *)
list_expr      = "[" , [ expression , { "," , expression } , [","] ] , "]" ;
                 (* Produces immutable List<T>; unification is semantic. *)
record_literal = identifier , "{" ,
                 [ record_field_init , { "," , record_field_init } , [","] ] ,
                 "}" ;
record_field_init
               = identifier , ":" , expression ;
block_expr     = "{" , { statement } , [ expression ] , "}" ;
                 (* Optional trailing expression is the block value. *)
if_expr        = "if" , expression , block_expr ,
                 "else" , ( block_expr | if_expr ) ;
                 (* `else` is required in expression position. *)
match_expr     = "match" , expression , "{" , { match_arm } , "}" ;
call_expr      = identifier , "(" , [ args ] , ")" ;
method_call_expr
               = expression , "." , identifier , "(" , [ args ] , ")" ;
                 (* Method/builder form is surface sugar; DL-2 requires
                    functional/value semantics after lowering. *)
args           = ( expression | named_arg ) , { "," , ( expression | named_arg ) } ;
named_arg      = identifier , "=" , expression ;

(* Lexical/literal/operator details are implemented by `cad-lexer` and the
   parser conformance corpus. This EBNF intentionally does not turn reserved
   future words into current declarations. No indentation-sensitive syntax
   or automatic semicolon insertion exists. *)
